--- a/template.html
+++ b/template.html
@@ -18,10 +18,11 @@
             background-color: #000000;
             color: #ffffff;
             font-family: Arial, sans-serif;
+            overflow: hidden;
         }
         .container {
-            width: 250px;
-            height: 120px;
+            width: 230px;
+            height: 102px;
             background-color: #ffffff;
             color: #000000;
             padding: 10px;
