--- a/template.html
+++ b/template.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obrazek</title>
     <style>
-        * {
+        html, body {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
         }
         body {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             background-color: #000000;
             color: #ffffff;
             font-family: Arial, sans-serif;
-            overflow: hidden;
         }
         .container {
-            width: 250px;
-            height: 122px;
+            width: 100%;
+            max-width: 250px;
+            height: 100%;
+            max-height: 122px;
             background-color: #ffffff;
             color: #000000;
             padding: 10px;
@@ -31,6 +34,8 @@
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
+            box-sizing: border-box;
+            position: relative;
         }
         .name {
             font-size: 18px;
@@ -44,7 +49,6 @@
             display: flex;
             justify-content: space-between;
             margin-top: 10px;
-
             padding-top: 5px;
         }
         .stat {
@@ -72,12 +76,12 @@
 </head>
 <body>
     <div class="container">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="24" height="24"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"/></svg>
         <div class="name">
             {{ name }}</div>
         <div class="stats">
             <div class="stat">
-                <span>{{ fC}}</span>
+                <span>{{ fC }}</span>
                 <div class="stat-label">Followers</div>
             </div>
             <div class="stat">
