--- a/template.html
+++ b/template.html
@@ -22,10 +22,8 @@
             font-family: Arial, sans-serif;
         }
         .container {
-            width: 100%;
-            max-width: 250px;
-            height: 100%;
-            max-height: 122px;
+            width: 250px;
+            height: 122px;
             background-color: #ffffff;
             color: #000000;
             padding: 10px;
@@ -33,7 +31,8 @@
             border: 2px solid #ff0000;
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
+            justify-content: center; /* Wyśrodkowanie w pionie */
+            align-items: center; /* Wyśrodkowanie w poziomie */
             box-sizing: border-box;
             position: relative;
         }
@@ -50,6 +49,7 @@
             justify-content: space-between;
             margin-top: 10px;
             padding-top: 5px;
+            width: 100%; /* Dodanie szerokości dla poprawnego rozkładu */
         }
         .stat {
             width: 80px;
@@ -72,13 +72,19 @@
             width: 2px;
             background-color: #000000;
         }
+        svg {
+            display: block; /* Usuń marginesy i paddingi domyślne */
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="24" height="24"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="24" height="24">
+            <path d="M448 209.9a210.1 210.1 0 0 1 -122.8-39.3V349.4A162.6 162.6 0 1 1 185 188.3V278.2a74.6 74.6 0 1 0 52.2 71.2V0l88 0a121.2 121.2 0 0 0 1.9 22.2h0A122.2 122.2 0 0 0 381 102.4a121.4 121.4 0 0 0 67 20.1z"/>
+        </svg>
         <div class="name">
-            {{ name }}</div>
+            {{ name }}
+        </div>
         <div class="stats">
             <div class="stat">
                 <span>{{ fC }}</span>
